--- a/Майбутній вебсайт/tanki-v-ukrainski-armii.html
+++ b/Майбутній вебсайт/tanki-v-ukrainski-armii.html
@@ -7,6 +7,8 @@
 <body>
     <h1>Головна</h1>
     <p>Контент для сторінки "Головна"</p>
+</body>
+<footer>
     <nav>
         <ul>
             <li><a href="\\P06\Users\Public\10-А\Коротєєв Денис - Косоноцький Роман\Майбутній вебсайт\tanki-v-ukrainski-armii.html">Головна</a></li>
@@ -14,5 +16,5 @@
             <li><a href="\\P06\Users\Public\10-А\Коротєєв Денис - Косоноцький Роман\Майбутній вебсайт\tipy-bronetehniki\tipy-bronetehniki.html">Типи бронетехніки</a></li>
         </ul>
     </nav>
-</body>
+</footer>
 </html>
