--- a/Майбутній вебсайт/tipy-bronetehniki/tipy-bronetehniki.html
+++ b/Майбутній вебсайт/tipy-bronetehniki/tipy-bronetehniki.html
@@ -7,12 +7,14 @@
 <body>
     <h1>Типи бронетехніки</h1>
     <p>Контент для сторінки "Типи бронетехніки"</p>
-    <nav>
+</body>
+<footer>    
+     <nav>
         <ul>
             <li><a href="\\P06\Users\Public\10-А\Коротєєв Денис - Косоноцький Роман\Майбутній вебсайт\tanki-v-ukrainski-armii.html">Головна</a></li>
             <li><a href="\\P06\Users\Public\10-А\Коротєєв Денис - Косоноцький Роман\Майбутній вебсайт\korotka-informacia.html">Коротка інформація</a></li>
             <li><a href="\\P06\Users\Public\10-А\Коротєєв Денис - Косоноцький Роман\Майбутній вебсайт\tipy-bronetehniki\tipy-bronetehniki.html">Типи бронетехніки</a></li>
         </ul>
     </nav>
-</body>
+</footer>
 </html>
