--- a/Майбутній вебсайт/tipy-bronetehniki/modyfikacii/modyfikacii.html
+++ b/Майбутній вебсайт/tipy-bronetehniki/modyfikacii/modyfikacii.html
@@ -7,6 +7,9 @@
 <body>
     <h1>Модифікації</h1>
     <p>Контент для сторінки "Модифікації"</p>
+    </nav>
+</body>
+<footer>    
     <nav>
         <ul>
             <li><a href="\\P06\Users\Public\10-А\Коротєєв Денис - Косоноцький Роман\Майбутній вебсайт\tanki-v-ukrainski-armii.html">Головна</a></li>
@@ -14,6 +17,5 @@
             <li><a href="\\P06\Users\Public\10-А\Коротєєв Денис - Косоноцький Роман\Майбутній вебсайт\tipy-bronetehniki\tipy-bronetehniki.html">Типи бронетехніки</a></li>
         </ul>
         </ul>
-    </nav>
-</body>
+</footer>
 </html>
