--- a/Майбутній вебсайт/tipy-bronetehniki/model/model.html
+++ b/Майбутній вебсайт/tipy-bronetehniki/model/model.html
@@ -7,6 +7,8 @@
 <body>
     <h1>Модель</h1>
     <p>Контент для сторінки "Модель"</p>
+</body>
+<footer>
     <nav>
         <ul>
             <li><a href="\\P06\Users\Public\10-А\Коротєєв Денис - Косоноцький Роман\Майбутній вебсайт\tanki-v-ukrainski-armii.html">Головна</a></li>
@@ -15,5 +17,5 @@
         </ul>
         </ul>
     </nav>
-</body>
+</footer>
 </html>
