--- a/Майбутній вебсайт/korotka-informacia.html
+++ b/Майбутній вебсайт/korotka-informacia.html
@@ -11,10 +11,11 @@
 <footer>
      <nav>
         <ul>
-            <li><a href="\\P06\Users\Public\10-А\Коротєєв Денис - Косоноцький Роман\Майбутній вебсайт\tanki-v-ukrainski-armii.html">Головна</a></li>
-            <li><a href="\\P06\Users\Public\10-А\Коротєєв Денис - Косоноцький Роман\Майбутній вебсайт\korotka-informacia.html">Коротка інформація</a></li>
-            <li><a href="\\P06\Users\Public\10-А\Коротєєв Денис - Косоноцький Роман\Майбутній вебсайт\tipy-bronetehniki\tipy-bronetehniki.html">Типи бронетехніки</a></li>
+            <li><a href="">Головна</a></li>
+            <li><a href="">Коротка інформація</a></li>
+            <li><a href="">Типи бронетехніки</a></li>
         </ul>
     </nav>
+    <p> popa</p>
 </footer>
 </html>
