--- a/Майбутній вебсайт/tipy-bronetehniki/tipy-bronetehniki.html
+++ b/Майбутній вебсайт/tipy-bronetehniki/tipy-bronetehniki.html
@@ -11,10 +11,18 @@
 <footer>    
      <nav>
         <ul>
-            <li><a href="\\P06\Users\Public\10-А\Коротєєв Денис - Косоноцький Роман\Майбутній вебсайт\tanki-v-ukrainski-armii.html">Головна</a></li>
-            <li><a href="\\P06\Users\Public\10-А\Коротєєв Денис - Косоноцький Роман\Майбутній вебсайт\korotka-informacia.html">Коротка інформація</a></li>
-            <li><a href="\\P06\Users\Public\10-А\Коротєєв Денис - Косоноцький Роман\Майбутній вебсайт\tipy-bronetehniki\tipy-bronetehniki.html">Типи бронетехніки</a></li>
+            <li><a href="Майбутній вебсайт\tanki-v-ukrainski-armii.html">Головна</a></li>
+            <li><a href="">Коротка інформація</a></li>
+            <li><a href="">Типи бронетехніки</a></li>
         </ul>
     </nav>
+    <p> tanki</p>
+    <img src="Photo\Leopard-2.png" alt="Leopard 2">
+    <img src="Photo\Т-64.png" alt="T-64">
+    <img src="Photo\Т-72.png" alt="T-72">
+    <img src="Photo\M1 Abrams.png" alt="M1 Abrams">
+    <img src="Photo\Challenger 2.png" alt="Challenger 2">
+    <img src="Photo\Т-80.png" alt="T-80">
+
 </footer>
 </html>
