--- a/GALERY.html
+++ b/GALERY.html
@@ -1,21 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TANKI</title>
-  <!-- Шрифт Audiowide -->
-  <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="GALERY.css">
 </head>
 <body>
-    <p> TANKI</p>
-    <img scr = "D:\11-А\Коротєєв Денис\TANKI\Photo\Challenger 2.png" alt = "Challenger 2">
-    <img scr = "D:\11-А\Коротєєв Денис\TANKI\Photo\Leopard-2.png" alt = "Leopard 2">
-    <img scr = "D:\11-А\Коротєєв Денис\TANKI\Photo\M1 Abrams.png" alt = "M1 Abrams">
-    <img scr = "D:\11-А\Коротєєв Денис\TANKI\Photo\T-64.png" alt = "T-64">
-    <img scr = "D:\11-А\Коротєєв Денис\TANKI\Photo\Т-90.png" alt = "Т-90">
-    <img scr = "D:\11-А\Коротєєв Денис\TANKI\Photo\T-80.png" alt = "T-80">
-    
+  <h1>TANKI</h1>
+
+  <!-- Галерея картинок -->
+  <section class="gallery">
+    <img src="Photo/Challenger 2.png" alt="Challenger 2">
+    <img src="Photo/Leopard-2.png" alt="Leopard 2">
+    <img src="Photo/M1 Abrams.png" alt="M1 Abrams">
+    <img src="Photo/T-64.png" alt="T-64">
+    <img src="Photo/T-72.png" alt="T-72">
+    <img src="Photo/T-80.png" alt="T-80">
+  </section>
+
+  <!-- Відео 1 -->
+  <section class="video-card">
+    <h2>Український Т-64 на полі битви</h2>
+    <video id="video1" controls>
+      <source src="Video/Український Т-64 на полі битви.mp4" type="video/mp4">
+      Ваш браузер не підтримує відео.
+    </video>
+  </section>
+
+  <!-- Відео 2 -->
+  <section class="video-card">
+    <h2>SLEEPWALKER _ M1 ABRAMS MAIN BATTLE TANK _ EDIT</h2>
+    <video id="video2" controls>
+      <source src="Video/SLEEPWALKER _ M1 ABRAMS MAIN BATTLE TANK _ EDIT _ IN ACTION.mp4" type="video/mp4">
+      Ваш браузер не підтримує відео.
+    </video>
+  </section>
+
+  <script src="GALERY.js"></script>
 </body>
 </html>
