--- a/GALERY.html
+++ b/GALERY.html
@@ -9,7 +9,6 @@
 <body>
   <h1>TANKI</h1>
 
-  <!-- Галерея картинок -->
   <section class="gallery">
     <img src="Photo/Challenger 2.png" alt="Challenger 2">
     <img src="Photo/Leopard-2.png" alt="Leopard 2">
@@ -19,7 +18,6 @@
     <img src="Photo/T-80.png" alt="T-80">
   </section>
 
-  <!-- Відео 1 -->
   <section class="video-card">
     <h2>Український Т-64 на полі битви</h2>
     <video id="video1" controls>
@@ -28,9 +26,9 @@
     </video>
   </section>
 
-  <!-- Відео 2 -->
+
   <section class="video-card">
-    <h2>SLEEPWALKER _ M1 ABRAMS MAIN BATTLE TANK _ EDIT</h2>
+    <h2>M1 ABRAMS </h2>
     <video id="video2" controls>
       <source src="Video/SLEEPWALKER _ M1 ABRAMS MAIN BATTLE TANK _ EDIT _ IN ACTION.mp4" type="video/mp4">
       Ваш браузер не підтримує відео.
