--- a/GALERY.html
+++ b/GALERY.html
@@ -13,9 +13,9 @@
     <img src="Photo/Challenger 2.png" alt="Challenger 2">
     <img src="Photo/Leopard-2.png" alt="Leopard 2">
     <img src="Photo/M1 Abrams.png" alt="M1 Abrams">
-    <img src="Photo/T-64.png" alt="T-64">
-    <img src="Photo/T-72.png" alt="T-72">
-    <img src="Photo/T-80.png" alt="T-80">
+    <img src="Photo\Т-64.jpg" alt="T-64">
+    <img src="Photo\Т-72.jpg" alt="T-72">
+    <img src="Photo\Т-80.jpg" alt="T-80">
   </section>
 
   <section class="video-card">
