--- a/GALERY.html
+++ b/GALERY.html
@@ -1,40 +1,43 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TANKI</title>
-  <link rel="stylesheet" href="GALERY.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>TANKI</title>
+<link rel="stylesheet" href="GALERY.css">
 </head>
 <body>
-  <h1>TANKI</h1>
-
-  <section class="gallery">
-    <img src="Photo/Challenger 2.png" alt="Challenger 2">
-    <img src="Photo/Leopard-2.png" alt="Leopard 2">
-    <img src="Photo/M1 Abrams.png" alt="M1 Abrams">
-    <img src="Photo\Т-64.jpg" alt="T-64">
-    <img src="Photo\Т-72.jpg" alt="T-72">
-    <img src="Photo\Т-80.jpg" alt="T-80">
-  </section>
-
-  <section class="video-card">
-    <h2>Український Т-64 на полі битви</h2>
-    <video id="video1" controls>
-      <source src="Video/Український Т-64 на полі битви.mp4" type="video/mp4">
-      Ваш браузер не підтримує відео.
-    </video>
-  </section>
+<h1>TANKI</h1>
 
 
-  <section class="video-card">
-    <h2>M1 ABRAMS </h2>
-    <video id="video2" controls>
-      <source src="Video/SLEEPWALKER _ M1 ABRAMS MAIN BATTLE TANK _ EDIT _ IN ACTION.mp4" type="video/mp4">
-      Ваш браузер не підтримує відео.
-    </video>
-  </section>
+<section class="gallery">
+<img src="Photo/Challenger 2.png" alt="Challenger 2">
+<img src="Photo/Leopard-2.png" alt="Leopard 2">
+<img src="Photo/M1 Abrams.png" alt="M1 Abrams">
+<img src="Photo/Т-64.jpg" alt="T-64">
+<img src="Photo/Т-72.jpg" alt="T-72">
+<img src="Photo/Т-80.jpg" alt="T-80">
+</section>
 
-  <script src="GALERY.js"></script>
+
+<section class="video-wrapper">
+<div class="video-block">
+<h2>Український Т-64 на полі битви</h2>
+<video id="video1" controls>
+<source src="Video/Український Т-64 на полі битви.mp4" type="video/mp4">
+</video>
+</div>
+
+
+<div class="video-block">
+<h2>M1 ABRAMS</h2>
+<video id="video2" controls>
+<source src="Video/SLEEPWALKER _ M1 ABRAMS MAIN BATTLE TANK _ EDIT _ IN ACTION.mp4" type="video/mp4">
+</video>
+</div>
+</section>
+
+
+<script src="GALERY.js"></script>
 </body>
 </html>
